# PDFAgent-for-interviews

./: .gitignore  main.py  pyproject.toml
data/220240636/: 220240636.txt
outputs/: 220240636_面试问题.md
src/: main.py
